src/agrum/base/core/math/cocoR/SyntaxFormula.atg
/**
 *
 *   Copyright 2005-2020 Pierre-Henri WUILLEMIN(@LIP6) & Christophe GONZALES(@AMU)
 *   info_at_agrum_dot_org
 *
 *  This library is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Lesser General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This library is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU Lesser General Public License for more details.
 *
 *  You should have received a copy of the GNU Lesser General Public License
 *  along with this library.  If not, see <http://www.gnu.org/licenses/>.
 *
 */

// =============================================================================
//                               HEADERS
// =============================================================================

#include <algorithm>
#include <fstream>
#include <list>
#include <memory>
#include <sstream>
#include <stack>
#include <string>
#include <vector>

#include <agrum/base/core/math/math_utils.h>
#include <agrum/base/core/utils_dir.h>
#include <agrum/base/core/math/formula.h>

// =============================================================================
//                             PARSER
// =============================================================================

COMPILER EVAL

private:
  gum::Formula* _formula_;

public:
  void formula( gum::Formula* f ) {
    _formula_ = f;
  }

  gum::Formula& formula() {
    return *_formula_;
  }

  const gum::Formula& formula() const {
    return *_formula_;
  }

// =============================================================================
//                              SCANNER RULES
// =============================================================================

//________________________
CHARACTERS
letter = 'A'..'Z' + 'a'..'z'+ '_' .
digit  = '0'..'9'.
eol    = '\n'.

//________________________
TOKENS
integer    =  digit {digit}.
float      = ['+'|'-'] digit {digit} '.' digit {digit}.
scifloat   = ['+'|'-'] digit {digit} [ '.' digit {digit} ] ('E'|'e') ['+'|'-'] digit {digit} .
operator   = '+'|'-'|'*'|'/'|'^'|'<'|'>'.
eol        = '\n'.
ident      = letter {letter | digit | '_' | '.'}.

//________________________
IGNORE '\r' + eol + '\t'

$checkEOF=false // disable the end of file check

// =============================================================================
//                              PARSER RULES
// =============================================================================

PRODUCTIONS

//________________________
EVAL =
  (expression { expression }) (. _formula_->_finalize_(); .)
  .

expression =
    integer    (. _formula_->_push_number_((double)coco_atoi(t->val)); .)
    | float    (. _formula_->_push_number_((double)coco_atof(t->val)); .)
    | scifloat (. _formula_->_push_number_((double)coco_atof(t->val)); .)
    | operator (. _formula_->_push_operator_(narrow(t->val)[0]); .)
    | '('      (. _formula_->_push_leftParenthesis_(); .)
    | ')'      (. _formula_->_push_rightParenthesis_(); .)
    | ident    (. _formula_->_push_identifier_(narrow(t->val)); .)
    | ','      (. _formula_->_push_comma_(); .)
  .

END EVAL.
